--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h3 class="back">Chúc Mừng Sinh Nhật Như :3</h3>
     <p contenteditable="false">Gửi Ka,</p> 
     <p contenteditable="false">Chúc Mừng Sinh Nhật Ka! Đệ xin chúc Ka sẽ hạnh phúc hơn khi sang tuổi mới. Cảm ơn vì đã đọc, sinh nhật vui vẻ <3. </p>
-    <p contenteditable="false" class="name">Dương / Đàn em</p>
+    <p contenteditable="false" class="name">Dương   Đàn em</p>
   </div>
 </div>
 </div>
